Fix bottom margin, because of the overflow hidden.

--- a/css/src/metabox.scss
+++ b/css/src/metabox.scss
@@ -54,7 +54,7 @@ ul.wpseo-metabox-tabs li.active {
 ul.wpseo-metabox-tabs li {
 	display: inline-block;
 	margin-right: 5px;
-	margin-bottom: -1px;
+	margin-bottom: -5px;
 	padding: 0;
 	border-width: 1px 1px 0;
 	border-style: solid solid none;
